Добавил запрос на получение счетов клиента
