# src/main/java/ru/hits/trb/trbcore/controller/AccountController.java
@@ -10,33 +10,40 @@ import ru.hits.trb.trbcore.dto.account.AccountDto;
 import ru.hits.trb.trbcore.dto.account.NewAccountDto;
 import ru.hits.trb.trbcore.service.AccountService;
 
+import java.util.List;
 import java.util.UUID;
 
 @Slf4j
 @RestController
-@RequestMapping("/api/v1/accounts")
+@RequestMapping("/api/v1")
 @RequiredArgsConstructor
 @Tag(name = "API для счетов")
 public class AccountController {
 
     private final AccountService service;
 
-    @PostMapping
+    @PostMapping("/accounts")
     @Operation(summary = "Создать счет для клиента")
     public AccountDto createClientAccount(@Valid @RequestBody NewAccountDto dto) {
         return service.createClientAccount(dto);
     }
 
-    @GetMapping("/{id}")
+    @GetMapping("/accounts/{id}")
     @Operation(summary = "Получить информацию о счете по id")
     public AccountDto getAccount(@PathVariable UUID id) {
         return service.getAccount(id);
     }
 
-    @DeleteMapping("/{id}")
+    @DeleteMapping("/accounts/{id}")
     @Operation(summary = "Закрыть счет")
     public void closeAccount(@PathVariable UUID id) {
         service.closeAccount(id);
+    }
+
+    @GetMapping("/users/{id}/accounts")
+    @Operation(summary = "Получить счета клиента")
+    public List<AccountDto> getUserAccounts(@PathVariable UUID id) {
+        return service.getUserAccounts(id);
     }
 
 }
